Use .toList()